--- a/src/styles.css
+++ b/src/styles.css
@@ -291,7 +291,8 @@ body {
   margin: 18vw 0 0 5vw;
 }
 
-.option, .miscoption {
+.option,
+.miscoption {
   display: flex;
   align-items: center;
   background-color: transparent;
@@ -363,7 +364,8 @@ body {
   cursor: default;
 }
 
-.option input[type="range"], .option input[type="color"] {
+.option input[type="range"],
+.option input[type="color"] {
   background-color: transparent;
   flex-basis: 80%;
 }
@@ -402,7 +404,8 @@ body {
   border: 0.3vw solid #2299BB;
 }
 
-.option .switch, .miscoption .toggle {
+.option .switch,
+.miscoption .toggle {
   position: relative;
   width: 2.5vw;
   height: 0.9vw;
@@ -415,13 +418,15 @@ body {
   margin: 0 0 0 0;
 }
 
-.switch input, .toggle input { 
+.switch input,
+.toggle input {
   opacity: 0;
   width: 0;
   height: 0;
 }
 
-.switch .slider, .toggle .fill {
+.switch .slider,
+.toggle .fill {
   position: absolute;
   width: 100%;
   height: 100%;
@@ -450,19 +455,22 @@ body {
   border-radius: 50%;
 }
 
-.switch .slider:hover, .toggle .fill:hover, .zoomoptions .zoomin:hover, .zoomoptions .zoomout:hover {
+.switch .slider:hover,
+.toggle .fill:hover,
+.zoomoptions .zoomin:hover,
+.zoomoptions .zoomout:hover {
   filter: brightness(180%);
 }
 
-input:checked + .slider {
+input:checked+.slider {
   border: 0.25vw solid #66FFCC;
 }
 
-input:checked + .fill {
+input:checked+.fill {
   background-color: #66FFCC;
 }
 
-input:checked + .slider:before {
+input:checked+.slider:before {
   transform: translateX(1.6vw);
 }
 
@@ -857,7 +865,8 @@ input:checked + .slider:before {
   text-align: center;
 }
 
-.zoomoptions .zoomin, .zoomoptions .zoomout {
+.zoomoptions .zoomin,
+.zoomoptions .zoomout {
   width: 100%;
   flex-basis: 50%;
   background-color: #37433F;
@@ -887,10 +896,27 @@ input:checked + .slider:before {
 .timelinevisualiser .tpindicator {
   position: absolute;
   background-color: #CC6600;
-  height: 4vw;
+  height: 3vw;
   top: 50%;
   left: 0;
   transform: translate(-50%, -50%);
   width: 2px;
   z-index: 1;
+}
+
+.tpindicator .bpmlabel {
+  position: absolute;
+  background-color: #FFD966;
+  border-radius: 0.5vw;
+  color: #242B28;
+  font-weight: bold;
+  font-size: 0.6vw;
+  width: fit-content;
+  left: 50%;
+  top: -1.25vw;
+  transform: translate(-50%, 0);
+  white-space: nowrap;
+  padding: 0 0.2vw 0 0.2vw;
+  margin: 0 0 0 0;
+  text-align: center;
 }
