--- a/src/styles/rangeslider.css
+++ b/src/styles/rangeslider.css
@@ -1,8 +1,8 @@
 input[type="range"] {
 	color: #66FFCC;
-	--thumb-width: 3vw;
-	--thumb-height: 1vw;
-	--track-height: 0.2vw;
+	--thumb-width: 3rem;
+	--thumb-height: 1rem;
+	--track-height: 0.2rem;
 	--track-color: #00000033;
 	--brightness-hover: 115%;
 	--brightness-active: 180%;
@@ -22,6 +22,7 @@ input[type="range"]::-webkit-slider-thumb {
 	transition: all ease 100ms;
 	height: var(--thumb-height);
 }
+
 input[type="range"]::-moz-range-track,
 input[type="range"]::-moz-range-thumb {
 	appearance: none;
@@ -39,27 +40,23 @@ input[type="range"]::-webkit-slider-thumb {
 	--clip-top: calc((var(--thumb-height) - var(--track-height)) * 0.5 - 0.5px);
 	--clip-bottom: calc(var(--thumb-height) - var(--clip-top));
 	--clip-further: calc(100% + 1px);
-	--box-fill: calc(-100vmax - var(--thumb-width, var(--thumb-height))) 0 0
-		100vmax currentColor;
+	--box-fill: calc(-100vmax - var(--thumb-width, var(--thumb-height))) 0 0 100vmax currentColor;
 
 	width: var(--thumb-width, var(--thumb-height));
-	background: linear-gradient(currentColor 0 0) scroll no-repeat left center /
-		50% calc(var(--track-height) + 1px);
+	background: linear-gradient(currentColor 0 0) scroll no-repeat left center / 50% calc(var(--track-height) + 1px);
 	background-color: currentColor;
 	box-shadow: var(--box-fill);
 	border-radius: var(--thumb-width, var(--thumb-height));
 
 	filter: brightness(100%);
-	clip-path: polygon(
-		100% -1px,
-		var(--clip-edges) -1px,
-		0 var(--clip-top),
-		-100vmax var(--clip-top),
-		-100vmax var(--clip-bottom),
-		0 var(--clip-bottom),
-		var(--clip-edges) 100%,
-		var(--clip-further) var(--clip-further)
-	);
+	clip-path: polygon(100% -1px,
+			var(--clip-edges) -1px,
+			0 var(--clip-top),
+			-100vmax var(--clip-top),
+			-100vmax var(--clip-bottom),
+			0 var(--clip-bottom),
+			var(--clip-edges) 100%,
+			var(--clip-further) var(--clip-further));
 }
 
 input[type="range"]:hover::-webkit-slider-thumb {
@@ -71,8 +68,7 @@ input[type="range"]:active::-webkit-slider-thumb {
 }
 
 input[type="range"]::-webkit-slider-runnable-track {
-	background: linear-gradient(var(--track-color) 0 0) scroll no-repeat center /
-		100% calc(var(--track-height) + 1px);
+	background: linear-gradient(var(--track-color) 0 0) scroll no-repeat center / 100% calc(var(--track-height) + 1px);
 }
 
 input[type="range"]::-moz-range-thumb {
