Remove unnecessary SSR

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,5 +1,5 @@
 @import url("/fonts/toruspro/stylesheet.css");
-@import url("#root/styles/rangeslider.css");
+@import url("#/styles/rangeslider.css");
 
 :root {
   font-family: 'Torus Notched', Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
