--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -363,7 +363,7 @@ p {
         @include flexBasis(90%, 0, 1);
         background-color: #222A27;
         border-radius: 1rem;
-        padding: 0.75rem 1rem 0.75rem 1rem;
+        padding: 0.75rem 0 0.75rem 1rem;
         outline: none;
         border: none;
         font: inherit;
@@ -684,7 +684,7 @@ input:checked+.slider:before {
 #playbutton .buttonlabel {
   @include absolute(50%, 50%, -50%, -50%);
   color: #1A1E1B;
-  font-size: 1.1rem;
+  font-size: 1.4rem;
 }
 
 .filesvisualiser {
@@ -875,9 +875,8 @@ input:checked+.slider:before {
 }
 
 .timelinevisualiser .indicator {
-  width: 2px;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  @include topLeft(50%, 50%, -50%, -50%);
+  width: 1px;
 }
 
 .timelinevisualiser .tpindicator {
@@ -957,7 +956,7 @@ input:checked+.slider:before {
 
 .timingpointsoptions {
   @include flex(center, start, row);
-  @include flexBasis(75%);
+  @include flexBasis(70%, 0, 69);
   height: 100%;
   overflow: scroll;
 }
@@ -977,7 +976,7 @@ input:checked+.slider:before {
 }
 
 .attributeoptions {
-  @include flexBasis(68%, 0, 1);
+  @include flexBasis(68%, 0, 69);
   padding: 0 1rem 0 1rem;
   height: 100%;
   background-color: #2E3835;
@@ -988,12 +987,18 @@ input:checked+.slider:before {
   border-radius: 0.5rem;
   transition: 0.2s;
   padding: 0 2% 0 2%;
+  margin: 0.2rem 0 0.2rem;
   background-color: #394642;
   justify-content: space-evenly;
 }
 
 .timeoption:hover {
   background-color: #5C7069;
+
+}
+
+.timeoption[active="true"] {
+  background-color: #33CC99;
 }
 
 .attributeoption {
@@ -1017,8 +1022,20 @@ input:checked+.slider:before {
 }
 
 .timingpointeditor {
-  @include flex(center, center, column);
-  @include flexBasis(25%);
+  @include flex(left, center, column);
+  @include flexBasis(30%, 0, 0);
   background-color: #171C1A;
   height: 100%;
+
+  h4 {
+    flex-basis: 20% !important;
+  }
+
+  p {
+    width: 90%;
+  }
+
+  .emptyspace {
+    height: 2rem;
+  }
 }
